add user and video model

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,5 @@
 PORT=8000
 MONGODB_URL=mongodb+srv://mohdsajeed:your-password@sajid.duknu7u.mongodb.net
+ACCESS_TOKEN_SECRETS=habibi welcome
+REFRESH_TOKEN_SECRET=merhaba welcome
+REFRESH_TOKEN_EXPIRY=10d
