--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,8 @@ MONGODB_URL=mongodb+srv://mohdsajeed:your-password@sajid.duknu7u.mongodb.net
 ACCESS_TOKEN_SECRETS=habibi welcome
 REFRESH_TOKEN_SECRET=merhaba welcome
 REFRESH_TOKEN_EXPIRY=10d
+
+
+CLOUDINARY_CLOUD_NAME=UEOPJKSFSF
+CLOUDINARY_API_KEY=123466
+CLOUDINARY_API_SECRET=FHSFSFS
